@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-27T08:17:58Z",
+  "timestamp" : "2024-02-28T01:03:51Z",
   "count_outdated" : 1599,
   "uniques_outdated" : 875,
-  "count" : 1614,
+  "count" : 1615,
   "uniques" : 884,
   "clones" : [
     {
@@ -70,9 +70,9 @@
     },
     {
       "timestamp": "2024-02-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
